--- a/map.html
+++ b/map.html
@@ -23,6 +23,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Audiowide&family=Black+Ops+One&family=Pixelify+Sans:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Sixtyfour+Convergence&family=Tomorrow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Workbench&display=swap"
     rel="stylesheet">
+    <title>Galactic Map</title>
 </head>
 
 <body>
